# diligence-binder

./: .env.example  .gitignore  README.md  SECURITY.md  build.spec  build_review_html.py  installer.iss  launcher.py  match_and_export.py  pipeline_items.py  pyproject.toml  requirements.txt
tests/: test_match_and_export.py  test_pipeline_items.py
