[project]
name = "diligence-binder"
version = "0.1.0"
description = "AI-powered evidence binder automation for IBD workpapers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "PyMuPDF>=1.23.0",
  "requests>=2.28.0",
  "openpyxl>=3.1.0",
]

[project.scripts]
diligence-extract = "pipeline_items:main"
diligence-review-html = "build_review_html:main"
diligence-match-export = "match_and_export:main"

[tool.ruff]
line-length = 100
target-version = "py310"
